#1615 output atraster to pdf, still fit to one page

--- a/src/main/resources/SystemMessages_de.properties
+++ b/src/main/resources/SystemMessages_de.properties
@@ -184,3 +184,5 @@ key_num_threads_requested=Anzahl angef. Verbindungen
 key_open_uuid =Open-User-UUID
 key_utc=UTC
 key_vienna=Lokalzeit Wien
+key_atraster100 = Österreich-Raster 100m
+key_atraster250 = Österreich-Raster 250m
