#1615 pdf export: add various parameters

--- a/src/main/resources/SystemMessages_de.properties
+++ b/src/main/resources/SystemMessages_de.properties
@@ -186,3 +186,12 @@ key_utc=UTC
 key_vienna=Lokalzeit Wien
 key_atraster100 = Österreich-Raster 100m
 key_atraster250 = Österreich-Raster 250m
+key_temperature = Temperatur des Geräts
+key_gkz = Gemeindekennzahl
+key_community = Gemeinde
+key_locality = Katastralgemeinde
+key_district = Bezirk
+key_province = Bundesland
+key_dtm_level = DGM-Niveau
+key_network_mcc_mnc = Mobilfunknetz MCC-MNC
+key_sim_mcc_mnc = Heimatnetz MCC-MNC
