#1615 pdf export: add raw dl/ul/ping values

--- a/src/main/resources/SystemMessages_de.properties
+++ b/src/main/resources/SystemMessages_de.properties
@@ -195,3 +195,4 @@ key_province = Bundesland
 key_dtm_level = DGM-Niveau
 key_network_mcc_mnc = Mobilfunknetz MCC-MNC
 key_sim_mcc_mnc = Heimatnetz MCC-MNC
+key_raw = ungerundet
