--- a/src/main/resources/SystemMessages_de.properties
+++ b/src/main/resources/SystemMessages_de.properties
@@ -184,9 +184,9 @@ key_num_threads_requested=Anzahl angef. Verbindungen
 key_open_uuid =Open-User-UUID
 key_utc=UTC
 key_vienna=Lokalzeit Wien
-key_atraster100 = Österreich-Raster 100m
-key_atraster250 = Österreich-Raster 250m
-key_temperature = Temperatur des Geräts
+key_atraster100 = Ã–sterreich-Raster 100m
+key_atraster250 = Ã–sterreich-Raster 250m
+key_temperature = Temperatur des GerÃ¤ts
 key_gkz = Gemeindekennzahl
 key_community = Gemeinde
 key_locality = Katastralgemeinde
